# koza

./: .gitignore  404.html  CITATION.cff  CNAME  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yaml  multifile.py  notes.md  protein-links-detailed_edges.tsv  protein-links-detailed_nodes.tsv  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml  test_lut.txt
.github/workflows/: build.yaml  build.yml  documentation.yaml  documentation.yml  publish.yaml  publish.yml  test.yaml  test.yml
Usage/configuring_ingests/: index.html
bioweave/: __init__.py  bioweave.py  bioweave_runner.py  cli.py  curie_util.py  main.py  test-main.py
bioweave/cli/: __init__.py
bioweave/dsl/: __init__.py
bioweave/facade/: data_collector.py  data_provider.py  helper.py  runner.py
bioweave/io/: utils.py
bioweave/model/: __init__.py  biolink.py  bioweave.py  curie_map.py  map_dict.py  source.py  translation_table.py
bioweave/reader/: csv_reader.py
bioweave/serializer/: __init__.py
bioweave/source/: csv_reader.py  reader.py  source.py
bioweave/validator/: __init__.py  exceptions.py  map_validator.py  model_validator.py  pydantic.py
braciole/: curie_map.py  curie_util.py  translation_table.py  validator.py
braciole/model/: __init__.py  translation_table.py
config/: bioweave.yaml  ingest-conf.yaml
config/curie/: curie_map.py
config/maps/: entrez-2-string.yaml  mim2gene.yaml  mimtitles.py  mimtitles.yaml
decisions/: 0001-graph-schema-strict-derivation.md  0002-schema-lives-with-database.md
docs/: 404.html  cli-reference.md  graph-operations.md  home.md  index.html  index.md  ingest_configuration.md  objects.inv  sitemap.xml  source.md  source_file.md
docs/Ingests/: index.html  index.md  koza_config.md  mapping.md  source_config.md  testing.md  transform.md
docs/Usage/: CLI.md  Module.md  configuring_ingests.md  ingests.md
docs/adr/: 0002-schema-lives-with-database.md
docs/cli-reference/: index.html
docs/graph-operations/: index.html  index.md
docs/search/: search_index.json
examples/: minimal.py
examples/config/: protein-links-detailed.py  protein-links-detailed.yaml
examples/data/: XenbaseGenepageToGeneIdMapping.txt  additional-entrez-2-string.tsv  entrez-2-string.tsv  string.tsv  string2.tsv
examples/maps/: custom-entrez-2-string.py  custom-entrez-2-string.yaml  entrez-2-string.yaml  genepage-2-gene.yaml  xb-genepage-to-gene.yaml
examples/standards/: gpi.yaml  oban.yaml  string.yaml
examples/string/: metadata.yaml  protein-links-detailed.py  protein-links-detailed.yaml
examples/string-declarative/: declarative-protein-links-detailed.py  declarative-protein-links-detailed.yaml  metadata.yaml  protein-links-detailed.py  protein-links-detailed.yaml
examples/string-file-archive/: protein-links-file-archive.py  protein-links-file-archive.yaml
examples/string-linkml-writer/: protein-links-detailed.py  protein-links-detailed.yaml
examples/string-w-custom-map/: custom-map-protein-links-detailed.py  custom-map-protein-links-detailed.yaml  protein-links-detailed.py  protein-links-detailed.yaml
examples/string-w-map/: map-protein-links-detailed.py  map-protein-links-detailed.yaml  metadata.yaml  protein-links-detailed.py  protein-links-detailed.yaml
examples/string-w-state/: protein-links-detailed.py  protein-links-detailed.yaml
examples/string-yield/: protein-links-yield.py  protein-links-yield.yaml
examples/stringdb/: metadata.yaml  protein-links-detailed.py  protein-links-detailed.yaml
examples/xenbase/: gene-information.py  gene-information.yaml  gene-literature.py  gene-literature.yaml  gene-to-phenotype.py  gene-to-phenotype.yaml  gene2phenotype.py  gene2phenotype.yaml  gene_information.py  gene_information.yaml  gene_literature.py  gene_literature.yaml  metadata.yaml
koza/: __init__.py  app.py  cli_runner.py  curie_util.py  koza.py  koza_runner.py  main.py  map_loader.py  test-main.py
koza/converter/: biolink_converter.py  kgx.py  kgx_converter.py  kgxconverter.py
koza/dsl/: __init__.py  row_filter.py
koza/facade/: data_collector.py  data_provider.py  helper.py
koza/io/: __init__.py  utils.py  yaml_loader.py
koza/manager/: data_collector.py  data_provider.py  helper.py
koza/model/: __init__.py  curie.py  curie_cleaner.py  koza.py  map_dict.py  source.py  translation_table.py
koza/utils/: log_utils.py
koza/validator/: map_validator.py  model_validator.py
scripts/: bench_jsonl_pydantic.py  bench_jsonl_writer.py  predicategen.py  pydantic_config.py  pydanticgen.py
search/: search_index.json
src/koza/: __init__.py  app.py  cli_runner.py  cli_utils.py  decorators.py  main.py  runner.py  transform.py
tests/: conftest.py  test_append.py  test_biolink_check.py  test_biolink_constraints.py  test_biolink_model.py  test_biolink_validators.py  test_closurize.py  test_closurize_category_columns.py  test_closurize_database_input.py  test_closurize_module_usage.py  test_closurize_multivalued_fields.py  test_connectivity.py  test_deduplicate.py  test_edge_report.py  test_export.py  test_export_verb.py  test_graph_schema.py  test_information_content.py  test_join.py  test_load.py  test_load_stream.py  test_merge.py  test_normalize.py  test_profile.py  test_prune.py  test_schema.py  test_schema_utils.py  test_split.py  test_utils.py  test_validate.py  test_validation.py
tests/integration/: test_archives.py  test_examples.py  test_glob_pipeline.py  test_multi_file_pipeline.py  test_parallel.py  test_row_limit.py  test_string.py  test_validator.py
tests/resources/: multifile.yaml  string.yaml  test-model.yaml  test_model.yaml
tests/unit/: test_biolink_converter.py  test_biolink_model.py  test_biolink_validators.py  test_cli.py  test_config.py  test_csvreader.py  test_curie.py  test_curie_util.py  test_custom_dict.py  test_filter.py  test_filtered_row_logging.py  test_glob_expansion.py  test_io_utils.py  test_jsonl_writer_lazy_handles.py  test_jsonlreader.py  test_jsonlreader_row_limit.py  test_map.py  (+19 more)
(+189 files in other folders)
