[project]
name = "koza"
version = "0.0.0"
description = "Data transformation framework for LinkML data models"
requires-python = ">=3.10,<4"
authors = [
    { name = "The Monarch Initiative", email = "info@monarchinitiative.org" },
    { name = "Kevin Schaper", email = "kevinschaper@gmail.com" },
    { name = "Glass Elsarboukh", email = "g.elsarboukh@gmail.com" },
    { name = "Kent Shefchek", email = "kent@tislab.org" },
]
readme = "README.md"
license = "BSD-3-Clause"

dependencies = [
    "coverage>=7.9.2",
    "duckdb",
    "loguru",
    "mergedeep==1.3.4",
    "ordered-set>=4.1.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "sssom>=0.4",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "biolink-model>=4.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings[python]>=0.29.1",
]

[project.scripts]
koza = "koza.main:typer_app"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.ruff]
line-length = 120

lint.fixable = ["ALL"]

lint.ignore = [
    "F541", # f-strings with no placeholders
    "S101", # allow asserts
]

# Select or ignore from https://beta.ruff.rs/docs/rules/
lint.select = [
    "B", # bugbear
    # "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "Q",  # flake8-quotes
    "S",  # flake8-bandit
    "UP", # pyupgrade
    "W",  # Warning
]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
