[project]
name = "koza"
version = "0.0.0"
description = "Data transformation framework for LinkML data models"
requires-python = ">=3.10"
authors = [
    { name="The Monarch Initiative", email="info@monarchinitiative.org" },
    { name="Kevin Schaper", email="kevinschaper@gmail.com" },
    { name="Glass Elsarboukh", email="g.elsarboukh@gmail.com" },
    { name="Kent Shefchek", email="kent@tislab.org" },
    { name="Daniel Korn", email="daniel_korn@med.unc.edu"}
]
readme = "README.md"
license = "BSD-3-Clause"
packages = [
    { include = "koza", from = "src"}
]
dependencies = [
    "duckdb",
    "loguru",
    "ordered-set>=4.1.0",
    "pydantic>=2.4",
    "pyyaml>=5.0.0",
    "requests>=2.24.0",
    "sssom>=0.4",
    "typer>=0.12.3",
    "mergedeep>=1.3.4",
    "tqdm>=4.67.1",
    "coverage>=7.6.10"
]

#TODO: Explore removing dev dependency group.
[dependency-groups]
dev = [
    "ruff",
    "pytest>=6.0.0",
    "biolink-model>=4.2",
    "mkdocs>=1.4",
    "mkdocs-material>=9.5",
    "mkdocs-macros-plugin",
    "mkdocstrings[python]>=0.22.0",
]

[project.scripts]
koza = "koza.main:typer_app"

[build-system]
#TODO: explore if we need hatchling or could use uv_build
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

lint.fixable = ["ALL"]

lint.ignore = [
    "F541", # f-strings with no placeholders
    "S101", # allow asserts
]

# Select or ignore from https://beta.ruff.rs/docs/rules/
lint.select = [
    "B",  # bugbear
    # "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "Q",  # flake8-quotes
    "S",  # flake8-bandit
    "UP", # pyupgrade
    "W",  # Warning
]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
