[metadata]
name = bioweave
description = Data ingest framework for the Biolink Model
description-file = README.md
author = The Monarch Initiative
author-email = info@monarchinitiative.org
license = BSD
classifier =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
